<!--
    The MIT License (MIT)

    Copyright (c) 2015 Looped Labs Pvt. Ltd.

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in
    all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
    THE SOFTWARE.
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".DemoMain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/select_print_service"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/orange" />

    <Spinner
        android:id="@+id/spPrintService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/print_services" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnPrintConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/open_printer_configuration" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/url_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/orange" />

    <EditText
        android:id="@+id/etPrintUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_image_url"
        android:inputType="textUri"
        android:text="@string/sample_image_url" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spPrintURLType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/print_type" />

        <Button
            android:id="@+id/btnPrintUrl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="2dp"
            android:text="@string/print_url" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimaryDark" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/file_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/orange" />

        <TextView
            android:id="@+id/tvPrintFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sample_file"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spPrintFileType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/print_file_type" />

        <Button
            android:id="@+id/btnBrowse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="2dp"
            android:text="@string/browse" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/tvLoopedLabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:drawableStart="@mipmap/looped_labs"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/looped_labs"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0032ff" />

</LinearLayout>
